Closed Bug 1979758 Opened 8 months ago Closed 8 months ago

Google O Auth breakage due to local network access for nightly builds

Categories

(Core :: Networking, defect, P1)

defect

Tracking

()

RESOLVED FIXED
143 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox-esr140 --- unaffected
firefox141 --- unaffected
firefox142 --- unaffected
firefox143 --- fixed

People

(Reporter: smayya, Assigned: smayya)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:
initiate google o auth using ./gcloud auth application-default login and follow the login steps.
Login stalls.
The issue is currently seen only in nightly builds as the lna is currently enabled for nightly only

Assignee: nobody → smayya

Set release status flags based on info from the regressing bug 1960627

Pushed by smayya@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/58d6729daf85 https://hg.mozilla.org/integration/autoland/rev/72b22fd6edd7 use triggering principal instead of loading principal for LNA permissions. r=necko-reviewers,kershaw
Status: NEW → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 143 Branch
Component: DOM: Networking → Networking
QA Whiteboard: [qa-triage-done-c144/b143]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: