Bug 1979758 - use triggering principal instead of loading principal for LNA permissions. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D259027